apps/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flaresolverr
  ports:
    - name: http
      port: 8191
      targetPort: 8191
