apps/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "local-selfsigned"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares-https: traefik-forward-auth@kubernetescrd
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  tls:
    - hosts:
        - flaresolverr.home.dcxxiv.com
      secretName: flaresolverr-tls
  rules:
    - host: flaresolverr.home.dcxxiv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port:
                  number: 8191
